--- a/RickandMorty/Server/package.json
+++ b/RickandMorty/Server/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.0"
   }
 }
